infra/argocd/ingress.yml
# HTTP → HTTPS redirect
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.k8s.lopesgabriel.dev`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: default
      services:
        - name: argocd-server
          port: 80
---
# HTTPS IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.k8s.lopesgabriel.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
